Update FinOps Index page

--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -23,7 +23,6 @@ Discover good and best practise patterns for your projects
 * [Reserving Infrastructure Capacity](patterns/reserved-instances.html)
 * [Spot Instances](patterns/spot-instances.html)
 
-## Pages under construction
+## Tools
 
-- Tools (Tools to help team understand cost, usage and enviornmental impact)
-- Reports (standard formatted data of cost and impact)
+* [Cost & Usage Dashboard (Beta)](tools/dashboard.html)
