Add hackathon to WoE document

--- a/source/documentation/team-information/team-practises/ways-of-engineering.html.md.erb
+++ b/source/documentation/team-information/team-practises/ways-of-engineering.html.md.erb
@@ -115,6 +115,10 @@ To enhance our security posture and streamline the management of vulnerabilities
 
 Using a fixed version (via commit hash) ensures that you're using exactly the version of an action you reviewed or tested. If you reference actions by a mutable tag like main or v1, the underlying code can change without warning, potentially introducing vulnerabilities, malicious code or breaking changes. Dependencies can evolve, sometimes breaking compatibility. If a new version of an action is released under the same tag, it might contain breaking changes that disrupt your workflow. Commit hashes lock in known-good versions.
 
+### ✅ Team Hackathon
+
+At least once a year we will run an in person Hackathon where we try to discover unintended ways of gaining access to our systems and data.  This ensures we are testing for vulnerabilities and looking at the resilience of our existing security, enabling us to make changes and updates where necessary.
+
 ## Adding/Adjusting Ways of Engineering
 
 To maintain the relevance and effectiveness of our Ways of Engineering, we encourage team members to propose adjustments or additions. Suggestions can be discussed in dedicated Slack channels, Engineering Guild meetings, or directly through Pull Requests. Your contributions are crucial in ensuring our engineering practices remain dynamic, inclusive, and aligned with our goals.
