--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: FinOps and GreenOps at MoJ
-last_reviewed_on: 2025-07-16
+last_reviewed_on: 2025-09-10
 review_in: 6 months
 ---
 
@@ -26,3 +26,4 @@ Discover good and best practise patterns for your projects
 ## Tools
 
 * [Cost & Usage Dashboard (Beta)](tools/dashboard.html)
+* [AWS Billing and Cost Management Tools](tools/aws_billing_cost_management.html)
