Add Resource Library section to guide

--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -25,5 +25,26 @@ Discover good and best practise patterns for your projects
 
 ## Tools
 
+Explore the tools and dashboards to monitor and manage usage, cost and sustainability
+
 * [Cost & Usage Dashboard (Beta)](tools/dashboard.html)
 * [AWS Billing and Cost Management Tools](tools/aws_billing_cost_management.html)
+* [Website Carbon Calculator](https://www.websitecarbon.com/)
+
+## Resource Library
+
+A collection of guides, templates, best practices, and reference materials to support FinOps and GreenOps initiatives across the Ministry of Justice
+
+* [Environmentally sustainable services - Service Manual](https://www.gov.uk/service-manual/design/environmentally-sustainable-services)
+* [Managing your spending in the cloud - gov.uk](https://www.gov.uk/guidance/managing-your-spending-in-the-cloud)
+* [Make your technology sustainable - Point 12 of Technology Code of Practice](https://www.gov.uk/guidance/make-your-technology-sustainable)
+* [Managing legacy technology](https://www.gov.uk/guidance/managing-legacy-technology)
+* [Retireing your Service - Service Manual](https://www.gov.uk/service-manual/agile-delivery/retiring-your-service)
+* [Procurement Policy Note 06/21: Taking account of Carbon Reduction Plans in the procurement of major government contracts](https://www.gov.uk/government/publications/ppn-0124-carbon-reduction-contract-schedule)
+* [PPN 01/24 Carbon Reduction Contract Schedule](https://www.gov.uk/government/publications/ppn-0124-carbon-reduction-contract-schedule)
+* [Green Software Patterns](https://patterns.greensoftware.foundation/)
+* [FinOps Framework](https://www.finops.org/framework/)
+* [Sustainable by design](https://greenerservices.github.io/)
+* [Web Sustainability Guidelines](https://w3c.github.io/sustainableweb-wsg/)
+* [Software Carbon Intensity (SCI) Specification](https://sci.greensoftware.foundation/)
+* [General reference framework for ecodesign of digital services (RGESN) - 2024](https://ecoresponsable.numerique.gouv.fr/publications/referentiel-general-ecoconception/)
