Minor updates to index

--- a/source/documentation/team-information/team-information.html.md.erb
+++ b/source/documentation/team-information/team-information.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: Team Information
-last_reviewed_on: 2025-08-12
+last_reviewed_on: 2025-10-15
 review_in: 6 months
 ---
 
@@ -29,5 +29,5 @@ review_in: 6 months
 - [Risk Review](internal-processes/risk-review.html)
 - [Secret Naming Convention](internal-processes/secret-naming-convention.html)
 - [Testing and Release Process](internal-processes/testing-release-process.html)
-- [Assessment and Purchase of Reserved Instances](internal-processes/assess-reserved-instances.html)
-- [Assessment and Purchase of Savings Plans](internal-processes/savings-plan.html)
+- [Assessment and Purchase of Reserved Instances (AWS)](internal-processes/assess-reserved-instances.html)
+- [Assessment and Purchase of Savings Plans (AWS)](internal-processes/savings-plan.html)
