--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#operations-engineering-alerts"
 title: FinOps and GreenOps at MoJ
-last_reviewed_on: 2025-09-10
+last_reviewed_on: 2025-10-15
 review_in: 6 months
 ---
 
@@ -16,6 +16,10 @@ Mandatory practices that must be followed within Ministry of Justice.
 ## Patterns
 
 Discover good and best practise patterns for your projects
+
+### Workload Optimisation
+
+* [What is Workload Optimisation?](patterns/workload-optimisation.html)
 
 ### Rate Optimisation
 
