--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -32,6 +32,7 @@ Discover good and best practise patterns for your projects
 Explore the tools and dashboards to monitor and manage usage, cost and sustainability
 
 * [Cost & Usage Dashboard (Beta)](tools/dashboard.html)
+* [GreenOps Dashboard (Beta)](tools/greenops-poc.html)
 * [AWS Billing and Cost Management Tools](tools/aws_billing_cost_management.html)
 * [Website Carbon Calculator](https://www.websitecarbon.com/)
 
