Update channel for reviews

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -1,7 +1,7 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: Cloud Optimisation and Accountability
-last_reviewed_on: 2025-06-19
+last_reviewed_on: 2025-10-15
 review_in: 6 months
 ---
 
