--- a/source/documentation/mission-statement/mission-statement.html.md.erb
+++ b/source/documentation/mission-statement/mission-statement.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: Mission Statement
 last_reviewed_on: 2025-06-23
 review_in: 6 months
