--- a/source/documentation/finops-and-greenops-at-moj/patterns/spot-instances.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/patterns/spot-instances.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: Spot Instances
 last_reviewed_on: 2025-07-25
 review_in: 6 months
