--- a/source/documentation/finops-and-greenops-at-moj/patterns/workload-optimisation.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/patterns/workload-optimisation.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: What is Workload Optimisation?
 last_reviewed_on: 2025-10-15
 review_in: 6 months
