Update page owner slack channel

--- a/source/documentation/finops-and-greenops-at-moj/standards/tagging.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/standards/tagging.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: Tagging Standard
 last_reviewed_on: 2025-07-10
 review_in: 6 months
