Update page owner slack

--- a/source/documentation/finops-and-greenops-at-moj/tools/aws_billing_cost_management.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/tools/aws_billing_cost_management.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: AWS Billing and Cost Management
 last_reviewed_on: 2025-09-10
 review_in: 6 months
