--- a/source/documentation/team-information/architectural-decision-records/adr-003.html.md.erb
+++ b/source/documentation/team-information/architectural-decision-records/adr-003.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: ADR-003 DNS Failover
 last_reviewed_on: 2025-05-06
 review_in: 3 months
