--- a/source/documentation/team-information/architectural-decision-records/adr-007.html.md.erb
+++ b/source/documentation/team-information/architectural-decision-records/adr-007.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: ADR-007 Decommission Developer Portal
 last_reviewed_on: 2025-03-05
 review_in: 12 months
