--- a/source/documentation/team-information/architectural-decision-records/architectural-decision-records.html.md.erb
+++ b/source/documentation/team-information/architectural-decision-records/architectural-decision-records.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: Architectural Decision Records
 last_reviewed_on: 2025-06-19
 review_in: 6 months
