Update page owner slack channel

--- a/source/documentation/team-information/architectural-decision-records/adr-011.html.md.erb
+++ b/source/documentation/team-information/architectural-decision-records/adr-011.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: ADR-011 Design Principle - GitHub Features as Opt In
 last_reviewed_on: 2025-03-06
 review_in: 6 months
