--- a/source/documentation/team-information/architectural-decision-records/adr-013.html.md.erb
+++ b/source/documentation/team-information/architectural-decision-records/adr-013.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: ADR 013 Archiving the DNS repo
 last_reviewed_on: 2025-06-24
 review_in: 6 months
