--- a/source/documentation/team-information/architectural-decision-records/adr-016.html.md.erb
+++ b/source/documentation/team-information/architectural-decision-records/adr-016.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: ADR 016 Archive DNS-IAC
 last_reviewed_on: 2025-05-28
 review_in: 6 months
