--- a/source/documentation/team-information/architectural-decision-records/adr-017.html.md.erb
+++ b/source/documentation/team-information/architectural-decision-records/adr-017.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: owner_slack: "#coat-notifications"
 title: ADR 017 Revert decision to mandate that repository access must be via a Team
 last_reviewed_on: 2025-06-18
 review_in: 6 months
