--- a/source/documentation/team-information/architectural-decision-records/adr-018.html.md.erb
+++ b/source/documentation/team-information/architectural-decision-records/adr-018.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: ADR-018 Standardisation of Repository Naming for Operations Engineering
 last_reviewed_on: 2025-01-27
 review_in: 6 months
