--- a/source/documentation/team-information/architectural-decision-records/adr-021.html.md.erb
+++ b/source/documentation/team-information/architectural-decision-records/adr-021.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: ADR-021 Management of DNS Records through OctoDNS
 last_reviewed_on: 2024-12-30
 review_in: 6 months
