--- a/source/documentation/team-information/architectural-decision-records/adr-022.html.md.erb
+++ b/source/documentation/team-information/architectural-decision-records/adr-022.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: ADR 022 Decommission Maintenance Pages Platform
 last_reviewed_on: 2025-03-04
 review_in: 6 months
