--- a/source/documentation/team-information/architectural-decision-records/adr-023.html.md.erb
+++ b/source/documentation/team-information/architectural-decision-records/adr-023.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: ADR 023 Delegate Administration of Outside Collaborators
 last_reviewed_on: 2025-01-08
 review_in: 6 months
