--- a/source/documentation/team-information/architectural-decision-records/adr-024.html.md.erb
+++ b/source/documentation/team-information/architectural-decision-records/adr-024.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: ADR 024 Deprecate MoJ Sonarcloud
 last_reviewed_on: 2025-02-10
 review_in: 6 months
