--- a/source/documentation/team-information/team-practises/firebreak-sprints.html.md.erb
+++ b/source/documentation/team-information/team-practises/firebreak-sprints.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering"
+owner_slack: "#coat-notifications"
 title: Firebreak Sprints
 last_reviewed_on: 2024-02-20
 review_in: 3 months
