--- a/source/documentation/team-information/internal-processes/add-a-runbook.html.md.erb
+++ b/source/documentation/team-information/internal-processes/add-a-runbook.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: Add a Runbook
 last_reviewed_on: 2025-05-06
 review_in: 3 months
