--- a/source/documentation/team-information/internal-processes/add-slack-alert.html.md.erb
+++ b/source/documentation/team-information/internal-processes/add-slack-alert.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: Add a Slack alert to our alert channel
 last_reviewed_on: 2025-07-28
 review_in: 6 months
