--- a/source/documentation/team-information/internal-processes/assess-reserved-instances.html.md.erb
+++ b/source/documentation/team-information/internal-processes/assess-reserved-instances.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: Assessment and Purchase of Reserved Instances
 last_reviewed_on: 2025-08-01
 review_in: 3 months
