--- a/source/documentation/team-information/internal-processes/communication-plan.html.md.erb
+++ b/source/documentation/team-information/internal-processes/communication-plan.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: Cloud Optimisation & Accountability Communications Plan
 last_reviewed_on: 2025-07-28
 review_in: 3 months
