--- a/source/documentation/team-information/internal-processes/leavers-guide.html.md.erb
+++ b/source/documentation/team-information/internal-processes/leavers-guide.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: Leavers Guide
 last_reviewed_on: 2025-04-10
 review_in: 3 months
