--- a/source/documentation/team-information/internal-processes/risk-review.html.md.erb
+++ b/source/documentation/team-information/internal-processes/risk-review.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: Risk Review Meeting Process
 last_reviewed_on: 2025-04-22
 review_in: 3 months
