--- a/source/documentation/team-information/internal-processes/savings-plan.html.md.erb
+++ b/source/documentation/team-information/internal-processes/savings-plan.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: Assessment and Purchase of Savings Plans
 last_reviewed_on: 2025-08-12
 review_in: 3 months
