--- a/source/documentation/team-information/internal-processes/testing-release-process.html.md.erb
+++ b/source/documentation/team-information/internal-processes/testing-release-process.html.md.erb
@@ -1,5 +1,5 @@
 ---
-owner_slack: "#operations-engineering-alerts"
+owner_slack: "#coat-notifications"
 title: Testing and Release Process
 last_reviewed_on: 2025-05-13
 review_in: 6 months
