Add link to Azure Dashboards

--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#coat-notifications"
 title: FinOps and GreenOps at MoJ
-last_reviewed_on: 2025-10-15
+last_reviewed_on: 2025-10-22
 review_in: 6 months
 ---
 
@@ -34,6 +34,7 @@ Explore the tools and dashboards to monitor and manage usage, cost and sustainab
 * [Cost & Usage Dashboard (Beta)](tools/dashboard.html)
 * [GreenOps Dashboard (Beta)](tools/greenops-poc.html)
 * [AWS Billing and Cost Management Tools](tools/aws_billing_cost_management.html)
+* [Azure Cost Dashboards](https://app.powerbi.com/groups/me/reports/00560312-b6bc-4682-96c7-d6f09afc6562/ReportSection3a4add5ba15c1aabde8c?experience=power-bi)
 * [Website Carbon Calculator](https://www.websitecarbon.com/)
 
 ## Resource Library
