Add link to resources for sustainable-software-guidelines

--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#coat-notifications"
 title: FinOps and GreenOps at MoJ
-last_reviewed_on: 2025-10-22
+last_reviewed_on: 2025-10-24
 review_in: 6 months
 ---
 
@@ -54,3 +54,4 @@ A collection of guides, templates, best practices, and reference materials to su
 * [Web Sustainability Guidelines](https://w3c.github.io/sustainableweb-wsg/)
 * [Software Carbon Intensity (SCI) Specification](https://sci.greensoftware.foundation/)
 * [General reference framework for ecodesign of digital services (RGESN) - 2024](https://ecoresponsable.numerique.gouv.fr/publications/referentiel-general-ecoconception/)
+* [sustainable-software-guidelines](https://github.com/sustainable-software-guidelines/Sustainable-Software-Development)
