Updated WoE page - Terraform section

--- a/source/documentation/team-information/team-practises/ways-of-engineering.html.md.erb
+++ b/source/documentation/team-information/team-practises/ways-of-engineering.html.md.erb
@@ -89,6 +89,7 @@ We use Terraform as our Infrastructure as Code (IaC) tool to define, provision, 
 -  State management ensures our environments remain consistent and in sync.
 -  Version-controlled code enables collaboration, auditability, and rollback of changes.
 -  Modules allow us to reuse and standardize infrastructure components.
+-  Always add condition blocks to IAM Policy Trust Relations to avoid Confused Deputy Attack
 
 
 ## **Package Management and Environment**
