--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#coat-notifications"
 title: FinOps and GreenOps at MoJ
-last_reviewed_on: 2025-10-24
+last_reviewed_on: 2025-11-14
 review_in: 6 months
 ---
 
@@ -20,6 +20,7 @@ Discover good and best practise patterns for your projects
 ### Workload Optimisation
 
 * [What is Workload Optimisation?](patterns/workload-optimisation.html)
+* [Upgrade EBS Storage Type from gp2 to gp3](patterns/gp2-to-gp3-optimisation.html)
 
 ### Rate Optimisation
 
