Update shared mailbox email address

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#coat-notifications"
 title: Cloud Optimisation and Accountability
-last_reviewed_on: 2025-10-15
+last_reviewed_on: 2025-11-14
 review_in: 6 months
 ---
 
@@ -21,5 +21,5 @@ Discover legacy documentation.
 
 ## Contacts
 - Team Slack channel: [#cloud-optimisation-and-accountability-team](https://moj.enterprise.slack.com/archives/CPVD6398C)
-- Email us: [CloudOptimisationAccoutabilityTeam](mailto:CloudOptimisationAccoutabilityTeam@JusticeUK.onmicrosoft.com)
+- Email us: [CloudOptimisationAccoutabilityTeam](mailto:CloudOptimisationandAccountabilityTeam@justice.gov.uk)
 - Join our community Slack channel: [#finops-greenops-community](https://moj.enterprise.slack.com/archives/C088XQP62D9)
