--- a/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/finops-and-greenops-at-moj.html.md.erb
@@ -21,6 +21,7 @@ Discover good and best practise patterns for your projects
 
 * [What is Workload Optimisation?](patterns/workload-optimisation.html)
 * [Upgrade EBS Storage Type from gp2 to gp3](patterns/gp2-to-gp3-optimisation.html)
+* [EBS Snapshot Optimisation](patterns/ebssnapshots.html)
 
 ### Rate Optimisation
 
