--- a/source/documentation/finops-and-greenops-at-moj/tools/dashboard.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/tools/dashboard.html.md.erb
@@ -1,11 +1,11 @@
 ---
 owner_slack: "#coat-notifications"
 title: Cost & Usage Dashboard (Beta)
-last_reviewed_on: 2025-11-17
+last_reviewed_on: 2025-11-21
 review_in: 6 months
 ---
 
-# Cost & Usage Dashboard (Beta)
+# AWS Cost & Usage Dashboard (Beta)
 
 ## Background
 
@@ -13,15 +13,11 @@ Making cost and usage data readily available is key to empowering informed, time
 
 To support this we have created a dashboard to make data available.
 
-While our dashboard has no current documenation we have provided a video tutorial that explains the content of the dashboard and how to use it. This is available via the Dashboard.
-
 This dashboard is in **beta phase** of development.
 
 ## How to access the dashboard
 
-Access the dashboard via this link - [Cost & Usage Dashboard (Beta)](https://g-9d213fbc19.grafana-workspace.eu-west-2.amazonaws.com/d/eefmlx7flj4sgc/finops?orgId=1)
-
-Please note you will need to sign in with AWS IAM Identity Center. Access is based on your Observability Platform permissions.
+Access the dashboard via this link - [AWS Cost & Usage Dashboard (Beta)](https://dashboards.analytical-platform.service.justice.gov.uk/dashboards/d1b8e0de-a001-4f32-83d1-b37fd15e1a4f/)
 
 ## How to use the Dashboard
 
