--- a/source/documentation/finops-and-greenops-at-moj/tools/dashboard.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/tools/dashboard.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#coat-notifications"
 title: Cost & Usage Dashboard (Beta)
-last_reviewed_on: 2025-11-21
+last_reviewed_on: 2025-11-24
 review_in: 6 months
 ---
 
@@ -21,11 +21,13 @@ Access the dashboard via this link - [AWS Cost & Usage Dashboard (Beta)](https:/
 
 ## How to use the Dashboard
 
-Quick start guide for using the Cost and Usage Dashboard - Coming Soon!
+Quick start guide for using the Cost and Usage Dashboard
 
 ## How to provide feedback
 
-We want to improve our products based on your feedback and user needs. We have created a simple [feedback form](https://forms.office.com/e/a8fHd5MgQS) to capture feedback. You can submit as many feedback forms as you like.
+There are two ways to provide feedback:
+- [Feedback Form](https://forms.office.com/e/a8fHd5MgQS) 
+- [Email](CloudOptimisationandAccountabilityTeam@justice.gov.uk)
 
 ## Additional notes
 
