--- a/source/documentation/finops-and-greenops-at-moj/tools/dashboard.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/tools/dashboard.html.md.erb
@@ -21,7 +21,7 @@ Access the dashboard via this link - [AWS Cost & Usage Dashboard (Beta)](https:/
 
 ## How to use the Dashboard
 
-Quick start guide for using the Cost and Usage Dashboard
+Read the [Quick start guide](tools/dashboard-quickstart.html) for using the Cost and Usage Dashboard
 
 ## How to provide feedback
 
