--- a/source/documentation/finops-and-greenops-at-moj/tools/dashboard.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/tools/dashboard.html.md.erb
@@ -1,7 +1,7 @@
 ---
 owner_slack: "#coat-notifications"
 title: Cost & Usage Dashboard (Beta)
-last_reviewed_on: 2025-11-24
+last_reviewed_on: 2025-11-25
 review_in: 6 months
 ---
 
@@ -17,11 +17,13 @@ This dashboard is in **beta phase** of development.
 
 ## How to access the dashboard
 
-Access the dashboard via this link - [AWS Cost & Usage Dashboard (Beta)](https://dashboards.analytical-platform.service.justice.gov.uk/dashboards/d1b8e0de-a001-4f32-83d1-b37fd15e1a4f/)
+Access the dashboard via this link - [AWS Cost & Usage Dashboard (Beta)](https://dashboards.analytical-platform.service.justice.gov.uk/dashboards/d1b8e0de-a001-4f32-83d1-b37fd15e1a4f/).
+
+You will be prompted to login with your **`@justice.gov.uk`** identity.
 
 ## How to use the Dashboard
 
-Read the [Quick start guide](tools/dashboard-quickstart.html) for using the Cost and Usage Dashboard
+Read the [Quick start guide](tools/dashboard-quickstart.html) for using the Cost and Usage Dashboard.
 
 ## How to provide feedback
 
