--- a/source/documentation/finops-and-greenops-at-moj/tools/dashboard-quickstart.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/tools/dashboard-quickstart.html.md.erb
@@ -11,11 +11,11 @@ review_in: 6 months
 
 This Dashboard has been created to help Teams understand the cost and usage associated to their AWS resources.
 
-The pupose of this quick start guide is to help Teams familiarise themselves with how the Dashboard works and the types of data available.
+The purpose of this quick start guide is to help Teams familiarise themselves with how the Dashboard works and the types of data available.
 
 ## Controls
 
-These controls allow you to filter the data in to Dashboard via a number of mandatory tags and important data types. You can use as many filters as required to identify your data.
+These controls allow you to filter the data in the Dashboard via a number of mandatory tags and important data types. You can use as many filters as required to identify your data.
 
 Control definitions:
 
@@ -37,9 +37,9 @@ Control definitions:
 
 - **Environment** - Identifies whether usage relates to `Production`, `Non-Production`, or `No is-production tag` i.e. missing tags
 
-> Note: Many of these values are free text and case sensitive so you many find many combinations of similar tags depending on how they have been entered e.g. `NOMIS` and `nomis`. Recommended you correct tags for consistency.
+> Note: Many of these values are free text and case sensitive so you may find many combinations of similar tags depending on how they have been entered e.g. `NOMIS` and `nomis`. Recommended you correct tags for consistency.
 
-If you wish to reset a control to remove it or change it used the **"Show selected"** radio button to show values that can be removed.
+If you wish to reset a control to remove it or change it use the **"Show selected"** radio button to show values that can be removed.
 
 If you expect to see a particular value in the list of values but it is not there please check your AWS resource tags in the first instance. Otherwise, [contact COAT](https://cloud-optimisation-and-accountability.justice.gov.uk/#contacts)
 
@@ -47,13 +47,13 @@ For more information on mandatory resource tags please refer to the [Tagging Sta
 
 ## Tagging Coverage for Business Unit
 
-This section shows compliance with the [MoJ Tagging Standard](https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/finops-and-greenops-at-moj/standards/tagging.html#tagging-standard). You can use this to improve you taggaing and usage allocation i.e. to make sure you have a full picture of your costs
+This section shows compliance with the [MoJ Tagging Standard](https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/finops-and-greenops-at-moj/standards/tagging.html#tagging-standard). You can use this to improve your taggaing and usage allocation i.e. to make sure you have a full picture of your costs
 
-This section has it's own controls that are independant of the main dashboard controls. At present you can only filter on **Business Unit** and **Billing Period**. We indent to add more filters in due course.
+This section has it's own controls that are independant of the main dashboard controls. At present you can only filter on **Business Unit** and **Billing Period**. We intend to add more filters in due course.
 
 ## Cost by Category
 
-This section helps you understand you cost in different ways:
+This section helps you understand your cost in different ways:
 
 - **Cost in USD** - Total cost
 
@@ -61,16 +61,16 @@ This section helps you understand you cost in different ways:
 
 - **Cost over Time** - Timeseries for cost over the seleceted billing period
 
-- **Cost per enviornment** - Cost split by user defined enviornment
+- **Cost per environment** - Cost split by user defined enviornment
 
 - **Cost per Business Area** - Cost split by Business Unit
 
 ## Kubernetes (EKS) Cost
 
-This section only relates to service that are running on a Kubernetes cluster e.g. Cloud Platform. This section has it's own independant controls for **Namespace** and **Billing Period**.
+This section only relates to services that are running on a Kubernetes cluster e.g. Cloud Platform. This section has it's own independant controls for **Namespace** and **Billing Period**.
 
-For users running on these types of platform it is difficult to understand compute cost, as containers are running on large shared EC2 Instances. This view allows you to see **Used** and **Unused** cost. The **Used** cost tells you how much you compute resources actually cost. **Unused** indicates over provisioning and opportunities for right-sizing. 
+For users running on these types of platform it is difficult to understand compute cost, as containers are running on large shared EC2 Instances. This view allows you to see **Used** and **Unused** cost. The **Used** cost tells you how much your compute resources actually cost. **Unused** indicates over provisioning and opportunities for right-sizing. 
 
 ## Top 10s
 
-This sections shows curated views of the top 10 of cost and usage sorted a number of different ways to help idenitify opportunities for optimisation. This includes **Application**, **AWS Services** (e.g. RDS, S3, EC2), **Namespaces** (relates to Cloud Platform hosted apps only) and **AWS Account**.
+This section shows curated views of the top 10 of cost and usage sorted a number of different ways to help identify opportunities for optimisation. This includes **Application**, **AWS Services** (e.g. RDS, S3, EC2), **Namespaces** (relates to Cloud Platform hosted apps only) and **AWS Account**.
