Fix broken link

--- a/source/documentation/finops-and-greenops-at-moj/tools/dashboard.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/tools/dashboard.html.md.erb
@@ -23,7 +23,7 @@ You will be prompted to login with your **`@justice.gov.uk`** identity.
 
 ## How to use the Dashboard
 
-Read the [Quick start guide](tools/dashboard-quickstart.html) for using the Cost and Usage Dashboard.
+Read the [Quick start guide](https://cloud-optimisation-and-accountability.justice.gov.uk/documentation/finops-and-greenops-at-moj/tools/dashboard-quickstart.html) for using the Cost and Usage Dashboard.
 
 ## How to provide feedback
 
