runbook for refreshing spice datasets in quicksight

--- a/source/documentation/team-information/team-information.html.md.erb
+++ b/source/documentation/team-information/team-information.html.md.erb
@@ -31,3 +31,4 @@ review_in: 6 months
 - [Testing and Release Process](internal-processes/testing-release-process.html)
 - [Assessment and Purchase of Reserved Instances (AWS)](internal-processes/assess-reserved-instances.html)
 - [Assessment and Purchase of Savings Plans (AWS)](internal-processes/savings-plan.html)
+- [Refreshing SPICE Datasets in QuickSight](internal-processes/refreshing-spice-datasets.html)
