--- a/source/documentation/team-information/internal-processes/refreshing-spice-datasets.html.md.erb
+++ b/source/documentation/team-information/internal-processes/refreshing-spice-datasets.html.md.erb
@@ -18,7 +18,7 @@ select the relevant SPICE dataset that has been modified
 
 ![select spice dataset](../../images/select-spice-dataset.png)
 
-3) Navigate to the "Refresh" tab of the dataset and click on the "Refresh Now"
+3) Navigate to the "Refresh" tab of the dataset and click on "Refresh Now"
 
 ![refresh spice dataset](../../images/refresh-spice-dataset.png)
 
@@ -26,7 +26,7 @@ select the relevant SPICE dataset that has been modified
 
 ![confirm spice refresh](../../images/confirm-spice-refresh.png)
 
-The latest version of the data has been pulled into the QuickSight SPICE memory cache from the Athena data source
+The latest version of the data will be pulled into the QuickSight SPICE memory cache from the Athena data source
 in AP Compute. You will now be able to use the latest data from the analysis.
 
 ## Other resources
