add to general description

--- a/source/documentation/team-information/internal-processes/refreshing-spice-datasets.html.md.erb
+++ b/source/documentation/team-information/internal-processes/refreshing-spice-datasets.html.md.erb
@@ -11,7 +11,7 @@ Our SPICE datasets are set to refresh daily at 6am on a schedule.
 
 During development, If a change has been made to the structure of a derived table, 
 or new data has been added to the table, you must manually refresh the SPICE dataset to pull the latest data changes
-into QuickSight:
+into QuickSight, if you want to use in in your analysis:
 
 1) Navigate to the "Datasets" section in the QuickSight area of the Control Panel and 
 select the relevant SPICE dataset that has been modified
