correct number list order and tidy external link

--- a/source/documentation/team-information/internal-processes/refreshing-spice-datasets.html.md.erb
+++ b/source/documentation/team-information/internal-processes/refreshing-spice-datasets.html.md.erb
@@ -18,11 +18,11 @@ select the relevant SPICE dataset that has been modified
 
 ![select spice dataset](../../images/select-spice-dataset.png)
 
-3) Navigate to the "Refresh" tab of the dataset and click on "Refresh Now"
+2) Navigate to the "Refresh" tab of the dataset and click on "Refresh Now"
 
 ![refresh spice dataset](../../images/refresh-spice-dataset.png)
 
-4) Select "Full refresh" and click "Continue". Click "Refresh".
+3) Select "Full refresh" and click "Continue". Click "Refresh".
 
 ![confirm spice refresh](../../images/confirm-spice-refresh.png)
 
@@ -31,4 +31,4 @@ in AP Compute. You will now be able to use the latest data from the analysis.
 
 ## Other resources
 
-Refreshing SPICE data - https://docs.aws.amazon.com/quicksuite/latest/userguide/refreshing-imported-data.html
+[AWS - Refreshing SPICE data](https://docs.aws.amazon.com/quicksuite/latest/userguide/refreshing-imported-data.html)
