--- a/source/documentation/finops-and-greenops-at-moj/tools/dashboard-quickstart.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/tools/dashboard-quickstart.html.md.erb
@@ -65,7 +65,7 @@ This section helps you understand your cost in different ways:
 
 ## Kubernetes (EKS) Cost
 
-This section only relates to services that are running on a Kubernetes cluster e.g. Cloud Platform. This section has it's own independant controls for **Namespace** and **Billing Period**.
+This section only relates to services that are running on a Kubernetes cluster e.g. Cloud Platform.
 
 For users running on these types of platform it is difficult to understand compute cost, as containers are running on large shared EC2 Instances. This view allows you to see **Used** and **Unused** cost. The **Used** cost tells you how much your compute resources actually cost. **Unused** indicates over provisioning and opportunities for right-sizing. 
 
