--- a/source/documentation/finops-and-greenops-at-moj/patterns/migrate-graviton.html.md.erb
+++ b/source/documentation/finops-and-greenops-at-moj/patterns/migrate-graviton.html.md.erb
@@ -29,7 +29,7 @@ Consider migrating to Graviton when:
 
 - Running general-purpose, compute or memory-intensive workloads that are consistently consuming CPU resources
 - You need to reduce infrastructure cost while sustaining or improving performance
-- Your applications can run on Arm64 or your build pipelines support multi-architecture images
+- Your applications can run on Arm64, or your build pipelines support multi-architecture images
 - Sustainability targets (carbon reduction, energy efficiency) are part of engineering goals
 
 ## Key benefits
